# afront

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile.am  MarchingCubes.cpp  PC_io.cpp  README.md  afront.sln  afront.vcproj  conekdtree.h  configure.ac  crease.cpp  crease.h  edgeflipper.cpp  edgeflipper.h  generaldef.cpp  guidance.h  lls_wrapper.h  lls_wrapper.inl  lsqr.cpp  output_controller_gui.cpp  output_controller_hhm.cpp  output_controller_hhm.h  output_controller_obj.cpp  output_controller_reeb.cpp  output_controller_reeb.h  rgpriv.h  test_glut_simple.cpp  triangulate_csg.cpp  triangulate_iso.h  triangulate_mesh.h  triangulate_tet.cpp  triangulator.cpp  triangulator.h  uheap.h
data/: bunny.off  knot-300-100.off
docs/: ARCHITECTURE.md
gtb/: Makefile.am  README.md  common.hpp  configure.ac  configure.standard  gtb.cpp  gtb.dsp  gtb.dsw  gtb.hpp  gtb.sln  gtb.vcproj  stlext.h  unix.hpp  windows.hpp
gtb/Windowing/: wclass.cpp  wclass.h  windowing.h
gtb/debug/: debug.cpp  debug.hpp  test_debug.cpp
gtb/error/: err.cpp  err.h  err.inl  error.cpp  error.hpp  test_error.cpp
gtb/graphics/: PlaneTransformation.cpp  PlaneTransformation.h  RSTPlane.hpp  box2.cpp  box2.hpp  box2.ipp  box3.cpp  box3.hpp  box3.ipp  camera.cpp  camera.hpp  camera.ipp  camera_path.cpp  camera_path.hpp  circle3.cpp  circle3.hpp  circle3.ipp  color_rgb.cpp  color_rgb.hpp  color_rgb.ipp  cone.cpp  cone.hpp  cone.ipp  coordinate_system.cpp  coordinate_system.hpp  coordinate_system.ipp  graphics.cpp  graphics.hpp  icosahedron.cpp  icosahedron.hpp  icosahedron.ipp  image.cpp  image.hpp  image.ipp  image_float.cpp  image_float.hpp  image_float.inl  image_tile.cpp  image_tile.hpp  image_tile.ipp  (+134 more)
gtb/io/: io.cpp  io.hpp  io.ipp  test_base_name.cpp  test_extension.cpp
gtb/math/: amat.cpp  amat.h  amat.inl  amatc.cpp  amatc.h  amatc.inl  arraymat.h  epsilon.cpp  epsilon.hpp  functions.h  linearsolvers.h  math.cpp  math.hpp  math.ipp  mathtools.cpp  mathtools.h  mathtools.inl  matrix4.cpp  matrix4.hpp  matrix4.ipp  mynr.cpp  mynr.h  poly.h  poly.inl  poly_termeval.inl  poly_trimapper.inl  test_math.cpp  test_matrix4.cpp
gtb/math/NR/: frprmn.inl  linmin2.inl  nr.h  nrutil.cpp  nrutil.h  powell.inl  svdcmp.inl
gtb/math/nrold/: brent.inl  f1dim.inl  linmin.inl  mnbrak.inl  nr.h  nrutil.cpp  nrutil.h  powell.inl
gtb/memory/: counter.h  hirestimer.h  memory.cpp  memory.hpp  ptrs.h  timer.h
gtb/mp/: mp.h  mp_choose.inl  mp_common.h  mp_ctassert.h  mp_factorial.inl  mp_int2type.inl  mp_power.inl  mp_tuple.h
gtb/network/: netutil.cpp  netutil.hpp  network.hpp  socket_client.cpp  socket_client.hpp  socket_server.cpp  socket_server.hpp  test_client.cpp  test_server.cpp
gtb/plp/: extinction_coef.cpp  extinction_coef.hpp  extinction_coef.ipp  extinction_coef_set.cpp  extinction_coef_set.hpp  front.cpp  front.hpp  plp.cpp  plp.hpp  plp.ipp
gtb/real/: real.cpp  real.hpp  real.ipp  test_real.cpp
gtb/replace/: replace.h
gtb/ui/: commandline.cpp  commandline.h  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  ui.cpp  ui.hpp
gtb/util/: timer.cpp  timer.hpp  timer.ipp  util.cpp  util.hpp  view.h  view.inl
lib/: README.md
lib/ThreadLib/: CriticalSection.cpp  CriticalSection.h  Makefile.am  ReadMe.txt  RunInThread.h  RunInThread.inl  Sem.h  Semaphore.cpp  Thread.cpp  Thread.h  Threadslib.vcproj  WorkQueue.h  WorkQueue.inl  configure.ac  stdafx.cpp  stdafx.h  threadsall.h  threadslib.h
lib/mlslib/: CProjection.cpp  CProjection.h  Makefile.am  ReadMe.txt  configure.ac  knn.cpp  knn.h  mlslib.h  mlslib.sln  mlslib.vcproj  mlslibdefs.h  poly.cpp  poly.h  poly1.cpp  poly1.h  poly2.cpp  poly2.h  stdafx.cpp  stdafx.h  weight.h
lib/mlslib/NR/: brent.inl  f1dim.inl  jacobi.inl  linmin.inl  mnbrak.inl  nr.h  nrutil.cpp  nrutil.h  readme.txt  sobseq.cpp
lib/mlslib/projectall/: ReadMe.txt  projectall.cpp  projectall.vcproj  stdafx.cpp  stdafx.h
lib/rmlslib/: CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  FLF_conversion.cpp  FLF_conversion.h  FLF_io.cpp  FLF_structs.h  FeatureEdge.cpp  FeatureEdge.h  Global_Defs.h  HeightSurface.cpp  HeightSurface.h  Makefile.am  Matrix_3x3.cpp  Matrix_3x3.h  Matrix_MxN.cpp  Matrix_MxN.h  Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h  OrthoNormalBasis.cpp  OrthoNormalBasis.h  PC_io.cpp  Point.cpp  Point.h  PointCloud.cpp  PointCloud.h  Primitive_Functions.cpp  Primitive_Functions.h  Primitive_Structs.h  QuadraticSurface.cpp  QuadraticSurface.h  Stage1.cpp  Stage1.h  Stage2.cpp  Stage2.h  Stage3.cpp  (+15 more)
lib/stat/: basicstat.h  histogram.h  histogram.inl  stat.h  stat.vcproj  statdef.h  stltools.h
lib/viewer/: Makefile.am  configure.ac  debug_draw.cpp  debug_draw.h  trackball.cpp  viewer.cpp  viewer.h  viewer.sln  viewer.vcproj
src/: FLF_io.cpp  FLF_io.h  PC_io.h  common.h  front.cpp  front.h  generaldef.h  guidance.cpp  lsqr.h  main.cpp  output_controller_gui.h  output_controller_obj.h  parallel.h  rg.cpp  rg.h  test_glut.cpp  triangulate_csg.h  triangulate_iso.cpp  triangulate_mesh.cpp  triangulate_mls.cpp  triangulate_mls.h  triangulate_tet.h  triangulator.cpp
