AC_INIT([afront], [0.1])

AC_CONFIG_SUBDIRS(../gtb)
AC_CONFIG_SUBDIRS(../lib/viewer)
AC_CONFIG_SUBDIRS(../lib/ThreadLib)
AC_CONFIG_SUBDIRS(../lib/mlslib)
AC_CONFIG_SUBDIRS(../lib/rmlslib)


AC_PROG_LIBTOOL
AC_PROG_CXX
m4_include([../gtb/configure.standard])


AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT


